refactored routes for RESTful consistency
