# routes/goalassignments.js
@@ -2,7 +2,6 @@ const express = require('express');
 const router = express.Router();
 const goalAssignmentsController = require('../lib/instances/goalAssignmentsController');
 
-router.get('/goal-assignments/user/:userId', goalAssignmentsController.getGoalsByAssignment);
 router.get('/goal-assignments/goal/:goalId', goalAssignmentsController.getUsersByAssignment)
 router.post('/goal-assignments', goalAssignmentsController.create);
 router.patch('/goal-assignments/:assignmentId', goalAssignmentsController.updateById);
