# routes/goals.js
@@ -6,8 +6,7 @@ router.get('/goals', goalsController.getAll);
 router.post('/goals', goalsController.create);
 router.patch('/goals/:goalId', goalsController.updateById);
 router.delete('/goals/:goalId', goalsController.deleteById);
-
-router.get('/users/:userId/goal-assignments', goalsController.getGoalsByAssignment);
+router.get('/goals/:goalId/goal-assignments', goalsController.getUsersByAssignment)
 
 
 module.exports = router;
