# routes/user.js
@@ -8,6 +8,8 @@ router.post('/users', userController.create);
 router.get('/users/:userId', userController.getById);
 router.patch('/users/:userId', userController.updateById);
 router.delete('/users/:userId', userController.deleteById);
+router.get('/users/:userId/goal-assignments', userController.getGoalsByAssignment);
+
 
 
 
